--- a/PropertyMLsolution.ipynb
+++ b/PropertyMLsolution.ipynb
@@ -348,6 +348,8 @@
       },
       "source": [
         "#create new features\n",
+        "#this section set flags of estate,serviced,terrace,new =  1 if the spec_location column has keywords\n",
+        "#(estate,terrace,(luxur,new,executive),serviced) while the price still remain intact\n",
         "train2['estate_flag'] = train2['spec_location'].apply(lambda x: len([c for c in str(x).lower().split() if \"estate\" in c]))\n",
         "train2['terrace_flag'] = train2['other_description'].apply(lambda x: len([c for c in str(x).lower().split() if \"terraced\" \n",
         "                                                                  in c or \"terrace\" in c or \"detached\" in c\n",
@@ -356,17 +358,6 @@
         "                                                              if \"new\" in c or \"luxur\" in c \n",
         "                                                              or \"executive\" in c]))\n",
         "train2['serviced_flag'] = train2['other_description'].apply(lambda x: len([c for c in str(x).lower().split() if \"service\" in c]))"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "rCC467ZxONXB"
-      },
-      "source": [
-        ""
       ],
       "execution_count": null,
       "outputs": []
@@ -719,9 +710,13 @@
       "source": [
         "#Since some houses may have missing info it means some estate/serviced houses are not called estate/serviced houses. \n",
         "#Assumptions are made around houses which are not identified as estate/ service houses. \n",
+        "#all houses without flag= 1 are such houses  i.e estate_flag=0 and service_flag=0\n",
         "#The median/50th percentile of those houses is identified and any house above the median is considered as estate.\n",
-        "#Houses higher than 80th percentile are classified as serviced\n",
-        "\n",
+        "#also any house with exactly median/50th percentile values is flagged also as 0.this is the benchmark.\n",
+        "##more or less like saying any house price < = median value is estate_flag=0 \n",
+        "##more or less like saying any house price < = 80th percentile value is serviced_flag=0 \n",
+        "#Houses higher than 80th percentile are classified as serviced i.e serviced_flag=1\n",
+        "#also a new column estate_price and serviced_price was created(meaning houses with missing info about estate,serviced)\n",
         "\n",
         "estate_price = []\n",
         "import numpy as np\n",
@@ -773,6 +768,8 @@
         "id": "afis4O0hONXH"
       },
       "source": [
+        "#not forgetting that estate_price and serviced_prices are \n",
+        "#new prices of house without estate and service info respectively\n",
         "#save the output in a dataframe and in order to merge with original dataframe\n",
         "estate_price=pd.DataFrame(estate_price)\n",
         "estate_price['locationbed'] = estate_price['location'] + estate_price['bedspace'].astype(str)\n",
@@ -876,7 +873,8 @@
         "id": "RZjtRFY8ONXI"
       },
       "source": [
-        "#merge to original dataframe to create new dataframe\n",
+        "#merge to original dataframe(train2) to create new dataframe\n",
+        "#a new locationbed column is created on original dataframe train2 to create join column during merging\n",
         "train2['locationbed']  = train2 ['location'] + train2 ['bedrooms'].astype(str)\n",
         "train3 = pd.merge(train2,estate_price, on =\"locationbed\", how = \"left\")"
       ],
@@ -892,6 +890,9 @@
         "#identify estate houses that were not called estate houses by assigning houses greater than median as estate houses\n",
         "#identify serviced houses that were not called serviced houses by assigning houses greater than 80th percentile as serviced houses\n",
         "#terrace houses are typically greater than 1.8m based on distribution\n",
+        "#basically using our benchedmark above\n",
+        "# house prices > estate_price(50th percentile benchmark ) must be tagged as estate(estate_flag=1)\n",
+        "#house prices > serviced_price(80th percentile benchmark ) must be tagged as serviced(serviced_flag=1)\n",
         "train3['estate_flag'][(train3['bedrooms']==1)&(train3['price'] > train3['estate_price'])] = 1\n",
         "train3['estate_flag'][(train3['bedrooms']==2)&(train3['price'] > train3['estate_price'])] = 1\n",
         "train3['estate_flag'][(train3['bedrooms']==3)&(train3['price'] > train3['estate_price'])] = 1\n",
